# rl-warp

./: .gitignore  README.md  pyproject.toml  readme.md  readme.md.md  readme_ru.md
notebooks/: 00_Colab Runbook.ipynb  01. Reward.ipynb  02. WARP.ipynb  02.ipynb  03. Interpretation.ipynb  test.ipynb
outputs/2024-08-03/15-05-53/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-03/15-06-29/.hydra/: hydra.yaml
outputs/2024-08-03/15-07-41/.hydra/: hydra.yaml
outputs/2024-08-03/15-08-31/.hydra/: hydra.yaml
outputs/2024-08-03/15-10-21/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-03/15-10-43/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-03/15-12-55/.hydra/: hydra.yaml
outputs/checkpoint-1/: README.md  adapter_config.json  adapter_model.safetensors  rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
rl-warp/: constants.py  train_reward.py
rl-warp/configs/: reward_config.yaml
rl-warp/configs/reward/: dataset.yaml  model.yaml  tokenizer.yaml
rl-warp/utils/: data.py
scripts/configs/: reward_config.yaml  reward_trainer.yaml
scripts/utils/: data.py  train_reward.py
warp/: constants.py  train_reward.py  train_warp.py
warp/configs/: reward_config.yaml  warp_config.yaml
warp/configs/reward/: dataset.yaml  model.yaml  peft.yaml  tokenizer.yaml  trainer.yaml
warp/configs/warp/: dataset.yaml  optimizer.yaml  peft.yaml  reward_model.yaml  reward_tokenizer.yaml  scheduler.yaml  sft_model.yaml  sft_tokenizer.yaml  trainer.yaml
warp/structs/: warp_trainer.py
warp/utils/: data.py  train.py
(+28 files in other folders)
